[package]
name = "rust-decimal-test"
version = "0.1.0"
authors = ["Alessandro Rinaldi <ale.rinaldi@criptalia.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.8"
tokio = { version = "1.9.0", features = ["full"] }
mongodb = "2.0.0-beta.2"
bson = { version = "2.0.0-beta.2",  features = ["chrono-0_4", "decimal128"] }